--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
   display: flex;
   align-content: center;
   justify-content: none;
-  height: 35px;
+  height: 50px;
   margin-top: 10px;
   background-color: rgb(232, 232, 232);
 }
@@ -31,12 +31,16 @@
 /*estilos de Header */
 .header .buscar {
   width: 40%;
+  border-radius: 15px;
 }
 .header .fav {
   width: 60px;
 }
 .header .carro {
   width: 60px;
+}
+.header .header-logo {
+  width: 40%;
 }
 .header .header img {
   width: 30%;
@@ -86,6 +90,8 @@ h1 {
   background-color: rgb(232, 232, 232);
   height: 60px;
   align-items: center;
+  text-align: center;
+  text-shadow: 12px;
 }
 .main .barra .item-barra {
   margin: 35px;
@@ -116,6 +122,7 @@ h1 {
   display: flex;
   align-content: center;
   justify-content: center;
+  text-align: center;
 }
 .pre-footer button {
   border: none;
@@ -301,6 +308,7 @@ h1 {
 
 .top-header {
   display: wrap;
+  padding: 5px;
 }
 
 .header header {
@@ -312,7 +320,6 @@ h1 {
 
 .header img {
   width: 150px;
-  margin-bottom: 1rem;
 }
 
 .header .buscar {
@@ -328,11 +335,6 @@ h1 {
   flex-wrap: wrap;
   align-items: center;
   list-style: none;
-  padding: 0;
-}
-
-.nav .paginas li {
-  margin-bottom: 0.5rem;
 }
 
 .fotos-portada img {
@@ -385,7 +387,7 @@ h1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 1rem;
+    padding: 1rem;
   }
   .header header {
     flex-direction: row;
