menu para mq mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -300,6 +300,27 @@ h1 {
 }
 
 /* mq MOVIL */
+@media (max-width: 600px) {
+  .nav {
+    display: none;
+  }
+  .paginas {
+    display: none;
+  }
+  .menu {
+    display: none;
+  }
+  .pag-menu {
+    display: none;
+  }
+  .nav-mobile {
+    display: block;
+    padding: 15px;
+  }
+  .nav-mobile button img {
+    width: 15px;
+  }
+}
 .grid-container {
   display: grid;
   grid-template-columns: 1fr;
@@ -327,6 +348,7 @@ h1 {
 }
 
 .nav {
+  display: none;
   text-align: center;
 }
 
@@ -335,6 +357,7 @@ h1 {
   flex-wrap: wrap;
   align-items: center;
   list-style: none;
+  font-size: medium;
 }
 
 .fotos-portada img {
@@ -382,7 +405,7 @@ h1 {
 }
 
 /* mq TABLET*/
-@media (min-width: 768px) {
+@media (min-width: 600px) {
   .top-header {
     display: flex;
     justify-content: space-between;
@@ -398,12 +421,24 @@ h1 {
     margin-left: 2rem;
     margin-right: 2rem;
   }
-  .nav .paginas {
-    flex-direction: row;
-    justify-content: space-around;
+  .nav {
+    display: none;
   }
-  .nav .paginas li {
-    margin-bottom: 0;
+  .paginas {
+    display: none;
+  }
+  .menu {
+    display: none;
+  }
+  .pag-menu {
+    display: none;
+  }
+  .nav-mobile {
+    display: block;
+    padding: 15px;
+  }
+  .nav-mobile button img {
+    width: 15px;
   }
   .main .cards {
     flex-direction: row;
@@ -425,6 +460,22 @@ h1 {
   }
   .header .buscar {
     width: auto;
+  }
+  .nav {
+    display: block;
+  }
+  .nav-mobile {
+    display: none;
+  }
+  .pag-menu {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem;
+    text-decoration: none;
+    list-style-type: none;
+    color: black;
   }
   .img-prov {
     flex-wrap: nowrap;
